--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.0.9",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "moment": "^2.29.4",
     "next": "13.0.3",
     "qs": "^6.11.0",
     "react": "18.2.0",
