--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.56.1",
