--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@types/react-slick": "^0.23.10",
+    "@types/slick-carousel": "^1.6.37",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "moment": "^2.29.4",
