--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/material": "^5.10.13",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
+    "@types/react-bootstrap": "^0.32.32",
     "@types/react-dom": "18.0.9",
     "@types/react-slick": "^0.23.10",
     "@types/slick-carousel": "^1.6.37",
@@ -22,6 +23,7 @@
     "next": "13.0.3",
     "qs": "^6.11.0",
     "react": "18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
